--- a/styles/constants/_colors.scss
+++ b/styles/constants/_colors.scss
@@ -2,7 +2,8 @@ $blue: rgb(64, 111, 212);
 $blue_hover: rgb(123, 155, 243);
 $blue_active: rgb(147, 178, 245);
 
+$red: rgb(209, 47, 47);
+$red_hover: rgb(250, 124, 124);
+$red_active: rgb(253, 149, 154);
 
-$red:rgb(209, 47, 47);
-$red_hover:rgb(250, 124, 124);
-$red_active:rgb(253, 149, 154);
+$green: #4e9a51;
