--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -4,8 +4,8 @@
     justify-content: space-between;
 }
 .container {
-    height: 720px;
-    max-width: 512px;
+    height: 600px;
+    width: 512px;
     border-radius: 8% 6px 8% 6px;
     @include contain;
 }
